--- a/Juego1/TowerDefense/TowerDefense.vcxproj
+++ b/Juego1/TowerDefense/TowerDefense.vcxproj
@@ -40,6 +40,8 @@
     <ClCompile Include="GameLayer.cpp" />
     <ClCompile Include="Horde.cpp" />
     <ClCompile Include="GemGenerator.cpp" />
+    <ClCompile Include="LaserBeam.cpp" />
+    <ClCompile Include="LaserBeamFactory.cpp" />
     <ClCompile Include="Layer.cpp" />
     <ClCompile Include="MagentaGem.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -50,13 +52,19 @@
     <ClCompile Include="Pawn.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Point.cpp" />
+    <ClCompile Include="PowerUp.cpp" />
+    <ClCompile Include="PowerUpGenerator.cpp" />
+    <ClCompile Include="PowerUpInventory.cpp" />
     <ClCompile Include="Projectile.cpp" />
     <ClCompile Include="Gem.cpp" />
+    <ClCompile Include="ProjectileFactory.cpp" />
     <ClCompile Include="RGB.cpp" />
+    <ClCompile Include="RoundProjectile.cpp" />
+    <ClCompile Include="RoundProjectileFactory.cpp" />
     <ClCompile Include="ShopManager.cpp" />
-    <ClCompile Include="Space.cpp" />
     <ClCompile Include="Text.cpp" />
     <ClCompile Include="Tile.cpp" />
+    <ClCompile Include="MedKit.cpp" />
     <ClCompile Include="Tower.cpp" />
     <ClCompile Include="Turret.cpp" />
     <ClCompile Include="TurretA.cpp" />
@@ -64,6 +72,7 @@
     <ClCompile Include="TurretB.cpp" />
     <ClCompile Include="TurretBFactory.cpp" />
     <ClCompile Include="TurretFactory.cpp" />
+    <ClCompile Include="UIPowerUp.cpp" />
     <ClCompile Include="UITurretItem.cpp" />
     <ClCompile Include="UIPurchasedTurret.cpp" />
     <ClCompile Include="UITextIcon.cpp" />
@@ -91,6 +100,8 @@
     <ClInclude Include="GameLayer.h" />
     <ClInclude Include="Horde.h" />
     <ClInclude Include="GemGenerator.h" />
+    <ClInclude Include="LaserBeam.h" />
+    <ClInclude Include="LaserBeamFactory.h" />
     <ClInclude Include="Layer.h" />
     <ClInclude Include="MagentaGem.h" />
     <ClInclude Include="MapManager.h" />
@@ -100,13 +111,19 @@
     <ClInclude Include="Pawn.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Point.h" />
+    <ClInclude Include="PowerUp.h" />
+    <ClInclude Include="PowerUpGenerator.h" />
+    <ClInclude Include="PowerUpInventory.h" />
     <ClInclude Include="Projectile.h" />
     <ClInclude Include="Gem.h" />
+    <ClInclude Include="ProjectileFactory.h" />
     <ClInclude Include="RGB.h" />
+    <ClInclude Include="RoundProjectile.h" />
+    <ClInclude Include="RoundProjectileFactory.h" />
     <ClInclude Include="ShopManager.h" />
-    <ClInclude Include="Space.h" />
     <ClInclude Include="Text.h" />
     <ClInclude Include="Tile.h" />
+    <ClInclude Include="MedKit.h" />
     <ClInclude Include="Tower.h" />
     <ClInclude Include="Turret.h" />
     <ClInclude Include="TurretA.h" />
@@ -114,6 +131,7 @@
     <ClInclude Include="TurretB.h" />
     <ClInclude Include="TurretBFactory.h" />
     <ClInclude Include="TurretFactory.h" />
+    <ClInclude Include="UIPowerUp.h" />
     <ClInclude Include="UITurretItem.h" />
     <ClInclude Include="UIPurchasedTurret.h" />
     <ClInclude Include="UITextIcon.h" />
